Updated portfolio page
Reduced content, added read more button

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,45 +61,24 @@
     <p class="centered"><a href="http://scain.design" title="Personal Portfolio" target="_blank">scain.design</a></p>
 
     <h3>Problem</h3>
-    <p>Need to build a presence online where I can share recent work.</p>
+    <p>Create an online presence for my design work</p>
 
     <h3>Solution</h3>
-    <p>Create a mobile-first website that highlights three recent projects that I’ve worked on.</p>
+    <p>A mobile-first website that focuses on four recent projects</p>
 
     <h3>Process</h3>
-    <p>Throughout this process I asked various co-workers and fellow designers about their experiences building portfolios and sharing them with potential employers. I also shared the content and designs with various people so that I could develop a more seamless journey throughout the site.</p>
+    <ul>
+      <li>Self-reflection, research and competitive analysis</li>
+      <li>Content creation and message development</li>
+      <li>Prototyping solutions with InVision, testing with users and iterating improvements</li>
+      <li>Developing website in the open by hosting code on GitHub</li>
+    </ul>
 
-    <h4>Research and Brainstorming</h4>
-    <p>I wanted to create an online platform that told a story about who I am as a designer and individual.</p>
-    <p>The beginning of my design process always begins with research. In this instance, it involved self-reflection on who I am and what I’ve accomplished. A UX designer lead me in an exercise called Branding Deck so that I could build a semantic word list of my personal brand. I used Pinterest, Niice and Google Images to look for visual representations of the words and began to organize them into a map.</p>
-    <p>This helped me narrow my focus and develop a message that I would share throughout my portfolio.</p>
-
-    <h4>Content Creation and Messaging</h4>
-    <p>I looked at the work I’ve completed and began to curate based on how it supported my personal brand and story. I decided to develop content for each piece and compiled an outline to create a cohesive flow from one project to the next.</p>
-    <p>Next I identified potential visitors and their motivation so that I could create a journey through the site. By writing a description of each project in detail, I improved my personal brand communication in general and reflected on what I’ve accomplished. However, not every visitor will dedicate the time to read through all of the content, and I wanted to ensure that everyone was able to quickly grasp main concepts.</p>
-    <p>I began writing about a few key pieces of work and asking for feedback from close friends and family. For each project, I identified the main problem, solution, process, and skills and tools used. In the future, I’d like to be able to create custom portfolios where I can quickly pull together pieces that highlight different skills. As I build the content into a website, I will custom-tag each piece so that I can easily sort them later.</p>
-    <p>I am still working on editing the content describing my work.</p>
-
-    <h4>Design</h4>
-    <p>After I had a draft of the content, I began sketching ideas for the design. I wanted to start with a mobile-first approach so that I could easily show the portfolio on my phone.</p>
-    <p>After pencil drawing and wire-framing, I created the design in Illustrator. I started with a simple aesthetic so that I could prioritize the message and function of the site. As I developed the content and asked for feedback, I could easily remove parts of the design that did not support those priorities.</p>
-    <p>I am still working on editing the content describing my work.</p>
-    <h3>Photos</h3>
     <div class="flex-boxes">
-      <a class="fancybox flex-box" rel="group" href="assets/images/portfolio/sorting-cards.jpg">
-        <div class="flex-image"><img src="assets/images/portfolio/sorting-cards.jpg" alt="Word association card deck results"></div>
-        <small>Word association cards</small>
-      </a>
       <a class="fancybox flex-box" rel="group" href="assets/images/portfolio/word-map.jpg">
         <div class="flex-image"><img src="assets/images/portfolio/word-map.jpg" alt="Word association map"></div>
         <small>Word map</small>
       </a>
-      <a class="fancybox flex-box" rel="group" href="assets/images/portfolio/portfolio-sketches.jpg">
-        <div class="flex-image"><img src="assets/images/portfolio/portfolio-sketches.jpg" alt="Planning in sketchbook to identify projects for portfolio"></div>
-        <small>Sketching</small>
-      </a>
-    </div>
-    <div class="flex-boxes">
       <a class="fancybox flex-box" rel="group" href="assets/images/portfolio/portfolio-sketches1.jpg">
         <div class="flex-image"><img src="assets/images/portfolio/portfolio-sketches1.jpg" alt="Sketching featured projects"></div>
         <small>Sketches for featured projects</small>
@@ -108,6 +87,34 @@
         <div class="flex-image"><img src="assets/images/portfolio/portfolio-sketches2.jpg" alt="Planning in sketchbook on what should be included"></div>
         <small>Sketching</small>
       </a>
+    </div>
+    
+    <div class="button-wrapper">
+      <a href="" onclick="readMore()" title="Click button to read more about process" class="basic-button basic-button-outline center">Read more about Process</a>
+    </div>
+
+    <div class="hide">
+      <p>I asked various co-workers and fellow designers about their experiences building portfolios and sharing them with potential employers. I shared the content and designs with friends, family and hiring managers so that I could develop a more seamless journey throughout the site.</p>
+
+      <h4>Research and Brainstorming</h4>
+      <p>I want to create an online platform that tells a story about who I am as a designer.</p>
+      <p>The beginning of my design process always begins with research. A UX designer lead me in an exercise called Branding Deck so that I could build a semantic word list of my personal brand. I used Pinterest, Niice and Google Images to look for visual representations of the words and began to organize them into a map.</p>
+      <p>This helped me narrow my focus and develop a message that I could share throughout my portfolio.</p>
+
+      <h4>Content Creation and Messaging</h4>
+      <p>I began to curate my work based on how it supported my personal brand and story. I decided to develop content for each piece and compiled an outline to create a cohesive flow from one project to the next.</p>
+      <p>Next I identified potential visitors and goals so that I could create a journey through the site. By writing a description of each project in detail, I improved my personal brand communication in general and reflected on what I’ve accomplished. However, not every visitor will dedicate the time to read through all of the content, and I wanted to ensure that everyone was able to quickly grasp main concepts.</p>
+      <p>I began writing about a few key pieces of work and asking for feedback. For each project, I identified the main problem, solution, process, and skills and tools used. In the future, I’d like to be able to create custom portfolios where I can quickly pull together pieces that highlight different skills. As I build the content into a website, I will custom-tag each piece so that I can easily sort them later.</p>
+      <p>I am still working on editing the content describing my work.</p>
+
+      <h4>Design</h4>
+      <p>After I had a draft of the content, I began sketching ideas for the design. I wanted to start with a mobile-first approach so that I could easily show the portfolio on my phone.</p>
+      <p>After pencil drawing and wire-framing, I created the design in Illustrator. I started with a simple aesthetic so that I could prioritize the message and function of the site. As I developed the content, I could easily remove parts of the design that did not support those priorities.</p>
+      <p>Next I pulled the design into InVision so that I could test the design with people and look for areas where the journey could be improved. Once I had iterated through a couple variations, I felt confident to move forward with development.</p>
+
+      <h4>Development</h4>
+      <p>I chose to host on GitHub so I could track my own development and create visibility into my work. I developed the website from scratch using SASS and code from refills.io to speed up my workflow.</p>
+      <p>Because I wanted to continue testing, I developed as little as possible so that I could ask for feedback without becoming too attached to what I had created. This helped me maintain flexibility and continue to improve the design.</p>
     </div>
     <div class="button-wrapper">
       <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button basic-button-outline center">Other Featured Projects</a>
