Updated features project pages
Work Forward NOLA and Posting Pro

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,11 +60,7 @@
     <h2>Online Portfolio Process</h2>
     <p class="centered"><a href="http://scain.design" title="Personal Portfolio" target="_blank">scain.design</a></p>
 
-    <h3>Problem</h3>
-    <p>Create an online presence for my design work</p>
-
-    <h3>Solution</h3>
-    <p>A mobile-first website that focuses on four recent projects</p>
+    <p>A mobile-first website that showcases recent design and product work.</p>
 
     <h3>Process</h3>
     <ul>
@@ -88,9 +84,9 @@
         <small>Sketching</small>
       </a>
     </div>
-    
+
     <div class="button-wrapper">
-      <a href="" onclick="readMore()" title="Click button to read more about process" class="basic-button basic-button-outline center">Read more about Process</a>
+      <a href="" onclick="readMore()" title="Click button to read more about process" class="basic-button basic-button-outline center">Read more</a>
     </div>
 
     <div class="hide">
