--- a/work-forward-nola.html
+++ b/work-forward-nola.html
@@ -62,19 +62,29 @@
     <h2>Work Forward NOLA</h2>
     <p class="centered"><a href="http://www.workforwardnola.com" title="Work Forward NOLA" target="_blank">www.workforwardnola.com</a></p>
 
-    <h3>Problem</h3>
-    <p>Job seekers dropping off at the beginning of the workforce pipeline.</p>
-
-    <h3>Solution</h3>
-    <p>A mobile-first website that prepares and sets proper expectations for job seekers engaging with the workforce system in New Orleans so that they are less likely to drop off.</p>
+    <p>A mobile-first website for job seekers that sets proper expectations and prepares them for their first visit to a job center.</p>
 
     <h3>Process</h3>
-    <p>The workforce system encompasses local, state and federal resources such as unemployment, job centers and WIOA (Workforce Innovation and Opportunity Act), a federally funded program to grant money for job training. The system is complex and difficult to navigate which results in job seekers dropping off when they become unsure of their next steps. Job seekers were more successful when they connected with someone who can help guide them to a career. If more candidates understood clear expectations ahead of time, attrition rates would be reduced and overall job center engagement would improve.</p>
-    <p>The information available online for job centers in New Orleans was sparse and spread across different websites. If someone had a question or was unsure what to do, they had to visit a center in person. Once they arrived they would be prompted to complete steps that they could’ve done on their own time, such as sign up for LAWorks, the Louisiana state job website.</p>
-    <p>We heard from various career counselors that drop-off occurred when job seekers expected to walk in and out the same day with a job. When this didn’t happen, they lost valuable trust in the system and did not return.</p>
-    <p>After prototyping a printed version, we built a mobile-first website that compiled information about each job center in one place. It provided suggestions on how to make the most of a visit, such as remembering to bring a driver’s license or state ID. A job seeker could also take a career assessment that matched their interests to potential career pathways. Throughout the website, messaging indicated that the process would take time but that the job seeker would be supported throughout. Finally, the job seeker could sign up for the "job system" where they would receive a personalized referral to a center and a follow-up with a career counselor.</p>
-    <p>If career counselors can spend more time connecting job seekers to services that will lead them to careers, there will be better participation in the workforce system. We are still developing Work Forward NOLA, you can check it out now by visiting <a href="http://www.workforwardnola.com" title="Work Forward NOLA" target="_blank">www.workforwardnola.com</a>.</p>
-    <h3>Photos</h3>
+    <ul>
+      <li>User research and interviews with over 50 job seekers, workforce professionals and employers</li>
+      <li>Moderated design sprints and collaborative design sessions</li>
+      <li>Content creation and message development</li>
+      <li>Designed and developed UI</li>
+      <li>Prototyped solutions with InVision and tested with users</li>
+    </ul>
+
+    <div class="button-wrapper">
+      <a href="" onclick="readMore()" title="Click button to read more about process" class="basic-button basic-button-outline center">Read more</a>
+    </div>
+
+    <div class="hide">
+      <p>The workforce system encompasses local, state and federal resources such as unemployment, job centers and WIOA (Workforce Innovation and Opportunity Act), a federally funded program to grant money for job training. The system is complex and difficult to navigate which results in job seekers dropping off when they become unsure of their next steps. Job seekers were more successful when they connected with someone who can help guide them to a career. If more candidates understood clear expectations ahead of time, attrition rates would be reduced and overall job center engagement would improve.</p>
+      <p>The information available online for job centers in New Orleans was sparse and spread across different websites. If someone had a question or was unsure what to do, they had to visit a center in person. Once they arrived they would be prompted to complete steps that they could’ve done on their own time, such as sign up for LAWorks, the Louisiana state job website.</p>
+      <p>We heard from various career counselors that drop-off occurred when job seekers expected to walk in and out the same day with a job. When this didn’t happen, they lost valuable trust in the system and did not return.</p>
+      <p>After prototyping a printed version, we built a mobile-first website that compiled information about each job center in one place. It provided suggestions on how to make the most of a visit, such as remembering to bring a driver’s license or state ID. A job seeker could also take a career assessment that matched their interests to potential career pathways. Throughout the website, messaging indicated that the process would take time but that the job seeker would be supported throughout. Finally, the job seeker could sign up for the "job system" where they would receive a personalized referral to a center and a follow-up with a career counselor.</p>
+      <p>If career counselors can spend more time connecting job seekers to services that will lead them to careers, there will be better participation in the workforce system. We are still developing Work Forward NOLA, you can check it out now by visiting <a href="http://www.workforwardnola.com" title="Work Forward NOLA" target="_blank">www.workforwardnola.com</a>.</p>
+    </div>
+
     <div class="flex-boxes">
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/workforce-triangle.jpg">
         <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/workforce-triangle.jpg" alt="Whiteboard drawing of workforce triangle"></div>
