Updated featured projects
Web Request System and Work Forward NOLA

--- a/web-request-system.html
+++ b/web-request-system.html
@@ -49,32 +49,42 @@
   <section id="project-container">
     <h2>Web Request System</h2>
 
-    <h3>Problem</h3>
-    <p>Web updates were inconsistent and difficult to track resulting in communication barriers.</p>
-
-    <h3>Solution</h3>
-    <p>Create a reporting system that was easy to use and improved communication between content manager and web developers.</p>
+    <p>A web update reporting system that was easy to use and improved communication between content manager and web developers.</p>
 
     <h3>Process</h3>
-    <p>The OSMRE web team was struggling both to track the work we were doing and to share the responsibility of updating all the sites. As a regulatory agency, it is important that OSMRE keeps information on public-facing websites current so as to be in compliance with Surface Mining Coal and Reclamation Act (SMCRA).</p>
-    <p>Each region had a different method of receiving web update requests and there wasn’t visibility into the process. Fellow employees who were requesting updates were frustrated because correspondence was inconsistent and deadlines were easily missed.</p>
-    <p>I designed and created a universal system for all of OSMRE that would allow someone to submit a web update request for any site and have it automatically routed to the correct person on the web team. Any time a request was updated, the requester or developer would be notified with an email. In addition, we were able to collect better data about the average time and number of requests completed so that we could continue to improve the process.</p>
+    <ul>
+      <li>User research to identify problems with current system</li>
+      <li>Mapped out entire journey of web request</li>
+      <li>Developed an MVP of system using SharePoint</li>
+      <li>Conducted usability tests and made improvements</li>
+    </ul>
 
-    <h4>User Research</h4>
-    <p>I started by interviewing people who frequently submitted web requests to better understand what was and wasn’t working. I focused on improving the system through a few key areas that came up frequently in those conversations.</p>
-    <h5>Creating functional automated workflows</h5>
-    <p>The existing system had workflows that emailed the requester when something changed. However, the workflows were not functioning every time and a requester had to remember to check a website to know whether or not they needed to take action. This caused some requests to be delayed in their completion.</p>
-    <h5>Tracking internal communication</h5>
-    <p>When a new web request was submitted, correspondence between the developer and requester happened through a variety of channels. This made it difficult for both to track the requirements and information about the request.</p>
-    <h5>Visibility</h5>
-    <p>Requesters often felt frustrated if a task took longer than they expected. Web developers also felt frustrated when they weren’t given enough time to complete a request. Both parties needed more visibility into the other’s workflow.</p>
+    <div class="button-wrapper">
+      <a href="" onclick="readMore()" title="Click button to read more about process" class="basic-button basic-button-outline center">Read more</a>
+    </div>
 
-    <h4>Sketching</h4>
-    <p>After gathering initial research, I sketched out a full journey map of a web request and asked for feedback from both potential requesters and members of the web team. After a couple iterations, I felt confident in the process and begin building a new prototype.</p>
+    <div class="hide">
+      <p>The OSMRE web team was struggling both to track the work we were doing and to share the responsibility of updating all the sites. As a regulatory agency, it is important that OSMRE keeps information on public-facing websites current so as to be in compliance with Surface Mining Coal and Reclamation Act (SMCRA).</p>
+      <p>Each region had a different method of receiving web update requests and there wasn’t visibility into the process. Fellow employees who were requesting updates were frustrated because correspondence was inconsistent and deadlines were easily missed.</p>
+      <p>I designed and created a universal system for all of OSMRE that would allow someone to submit a web update request for any site and have it automatically routed to the correct person on the web team. Any time a request was updated, the requester or developer would be notified with an email. In addition, we were able to collect better data about the average time and number of requests completed so that we could continue to improve the process.</p>
 
-    <h4>Prototype</h4>
-    <p>Many of the employees were accustomed to using SharePoint to submit web requests, so I chose to build upon what was already being used. Throughout the build process, I asked for feedback from key users who frequented the system. I observed them interacting with the system so that I was able to identify barriers in the design. I presented at staff meetings, teaching how to use the tool and recruiting additional feedback.</p>
-    <p>Eventually, the tool was comprehensive enough to be used as the first version of a universal web request submission system. I taught the remaining web developers how to maintain the new system before I left to join Code for America as a 2016 fellow.</p>
+      <h4>User Research</h4>
+      <p>I started by interviewing people who frequently submitted web requests to better understand what was and wasn’t working. I focused on improving the system through a few key areas that came up frequently in those conversations.</p>
+      <p><strong>Creating functional automated workflows</strong></p>
+      <p>The existing system had workflows that emailed the requester when something changed. However, the workflows were not functioning every time and a requester had to remember to check a website to know whether or not they needed to take action. This caused some requests to be delayed in their completion.</p>
+      <p><strong>Tracking internal communication</strong></p>
+      <p>When a new web request was submitted, correspondence between the developer and requester happened through a variety of channels. This made it difficult for both to track the requirements and information about the request.</p>
+      <p><strong>Visibility</strong></p>
+      <p>Requesters often felt frustrated if a task took longer than they expected. Web developers also felt frustrated when they weren’t given enough time to complete a request. Both parties needed more visibility into the other’s workflow.</p>
+
+      <h4>Sketching</h4>
+      <p>After gathering initial research, I sketched out a full journey map of a web request and asked for feedback from both potential requesters and members of the web team. After a couple iterations, I felt confident in the process and begin building a new prototype.</p>
+
+      <h4>Prototype</h4>
+      <p>Many of the employees were accustomed to using SharePoint to submit web requests, so I chose to build upon what was already being used. Throughout the build process, I asked for feedback from key users who frequented the system. I observed them interacting with the system so that I was able to identify barriers in the design. I presented at staff meetings, teaching how to use the tool and recruiting additional feedback.</p>
+      <p>Eventually, the tool was comprehensive enough to be used as the first version of a universal web request submission system. I taught the remaining web developers how to maintain the new system before I left to join Code for America as a 2016 fellow.</p>
+    </div>
+
     <div class="button-wrapper">
       <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button basic-button-outline center">Other Featured Projects</a>
     </div>
