--- a/posting-pro.html
+++ b/posting-pro.html
@@ -72,48 +72,11 @@
       <li>Prototyped solutions with InVision and tested with users</li>
     </ul>
 
-    <div class="button-wrapper">
-      <a href="" onclick="readMore()" title="Click button to read more about process" class="basic-button basic-button-outline center">Read more</a>
-    </div>
-
-    <div class="hide">
-      <p>A partner on our project, Skillful, a Markle Initiative, was developing a platform to promote skills-based hiring. They found that employers were increasingly writing job postings that included education requirements higher than necessary. For instance, although the current workforce in a given position might on average have a high school diploma, an employer might ask for a Bachelor’s degree or higher. This practice eliminates a large portion of skilled and quality workers from applying. Furthermore, hiring overqualified workers can lead to turnover, lower quality work and a lack of growth opportunities.</p>
-      <p>At the beginning of our fellowship, we were asked to research implicit bias in job postings and develop ways that it might be identified and removed. In addition to education bias, we learned that reading level might also deter a qualified person from applying. For example, if a job requires a high school diploma but is written at a college level or higher, it may not be approachable to someone who is capable of completing the work. Furthermore, the average adult reading level in the U.S. is 7th/8th grade. Finally, we researched gender bias and how the language used in a job posting can attract more male or female candidates, perpetuating a lack of diversity in the workplace.</p>
-      <p>A couple days after being placed on the New Orleans team, our team began our first sprint to develop Posting Pro. The initial iteration was built upon two open-source libraries. The first flagged words based on three categories of implicit bias, and the second determined the equivalent grade reading level for a block of text. The tool would serve to identify areas of implicit bias within a job posting.</p>
-      <p>Over the next couple months we continued to refine and test the tool with hiring managers and HR representatives in New Orleans and San Francisco. Although we found that Posting Pro added value and promoted diversity, we needed to better understand the hiring process so that we could integrate the tool without adding extra work.</p>
-      <p>Halfway through the year we worked to add a “Start from Template” feature to Posting Pro. This would allow an employer to create a job posting from one that already existed for a given position. The templates were written without implicit bias and explicitly referenced skills required for the position rather than using education as a proxy. As the hiring manager edited the posting, it would be analyzed for implicit bias.</p>
-      <p>We determined that by helping an employer to create a job posting faster, we could integrate the tool into hiring process and create skills-based and inclusive job postings. We are still developing Posting Pro, you can check it out now by visiting <a href="https://posting-pro.herokuapp.com/" title="Posting Pro" target="_blank">posting-pro.herokuapp.com/</a>.</p>
-    </div>
-
     <div class="flex-boxes">
-      <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/planning.jpg">
-        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/planning.jpg" alt="White board planning describing components of tool and identifying biases to consider"></div>
-        <small>White board planning</small>
-      </a>
-      <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/journey-map.jpg">
-        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/journey-map.jpg" alt="Journey map written on post-it notes describing user journey"></div>
-        <small>Post-it note journey map</small>
-      </a>
       <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/sketching.jpg">
         <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/sketching.jpg" alt="White board sketching of user interface"></div>
         <small>Sketching UI on a whiteboard</small>
       </a>
-    </div>
-    <div class="flex-boxes">
-      <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/sketching-2.jpg">
-        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/sketching-2.jpg" alt="White board sketching of user interface"></div>
-        <small>Sketching UI on a whiteboard</small>
-      </a>
-      <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/wireframe.png">
-        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/wireframe.png" alt="Wireframe design created in Balsalmiq to represent user interface"></div>
-        <small>Wireframe created in balsamiq of user interface.</small>
-      </a>
-      <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/posting-pro-sketches.gif">
-        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/posting-pro-sketches.gif" alt="A gif that moves through the screens on one version of Posting Pro"></div>
-        <small>User interface</small>
-      </a>
-    </div>
-    <div class="flex-boxes">
       <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/cost-map.jpg">
         <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/cost-map.jpg" alt="Post-it notes on a graph. X-axis represents 'Time and Effort' and Y-axis represents 'Impact'"></div>
         <small>Potential feature cost map measuring time and effort against impact.</small>
@@ -122,17 +85,21 @@
         <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/cut-paste.jpg" alt="Web-based interface printed out and cut into slices. Person is re-organizing them"></div>
         <small>Exercise improving usability with existing UI elements.</small>
       </a>
-      <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/word-association.jpg">
-        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/word-association.jpg" alt="List of word associations to help describe career pathways"></div>
-        <small>Word association list for career pathways</small>
-      </a>
     </div>
-    <div class="flex-boxes">
-      <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/postingPro.gif">
-        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/postingPro.gif" alt="A gif that moves through the screens on one version of Posting Pro"></div>
-        <small>User interface</small>
-      </a>
+
+    <div class="button-wrapper">
+      <a href="" onclick="readMore()" title="Click button to read more about process" class="basic-button basic-button-outline center">Read more</a>
     </div>
+
+    <div class="hide">
+      <p>A partner on our project, Skillful, a Markle Initiative, developed a platform to promote skills-based hiring. They found that employers were increasingly writing job postings that included education requirements higher than necessary. For instance, although the current workforce in a given position might on average have a high school diploma, an employer might ask for a Bachelor’s degree or higher. This practice eliminates a large portion of skilled and quality workers from applying. Furthermore, hiring overqualified workers can lead to turnover, lower quality work and a lack of growth opportunities.</p>
+      <p>At the beginning of our fellowship, we were asked to research implicit bias in job postings and develop ways that it might be identified and removed. In addition to education bias, we learned that reading level might also deter a qualified person from applying. For example, if a job requires a high school diploma but is written at a college level or higher, it may not be approachable to someone who is capable of completing the work. Furthermore, the average adult reading level in the U.S. is 7th/8th grade. Finally, we researched gender bias and how the language used in a job posting can attract more male or female candidates, perpetuating a lack of diversity in the workplace.</p>
+      <p>A couple days after being placed on the New Orleans team, our team began our first sprint to develop Posting Pro. The initial iteration was built upon two open-source libraries. The first flagged words based on three categories of implicit bias, and the second determined the equivalent grade reading level for a block of text. The tool would serve to identify areas of implicit bias within a job posting.</p>
+      <p>Over the next couple months we continued to refine and test the tool with hiring managers and HR representatives in New Orleans and San Francisco. Although we found that Posting Pro added value and promoted diversity, we needed to better understand the hiring process so that we could integrate the tool without adding extra work.</p>
+      <p>Halfway through the year we worked to add a “Start from Template” feature to Posting Pro. This would allow an employer to create a job posting from one that already existed for a given position. The templates were written without implicit bias and explicitly referenced skills required for the position rather than using education as a proxy. As the hiring manager edited the posting, it would be analyzed for implicit bias.</p>
+      <p>We determined that by helping an employer to create a job posting faster, we could integrate the tool into hiring process and create skills-based and inclusive job postings. We are still developing Posting Pro, you can check it out now by visiting <a href="https://posting-pro.herokuapp.com/" title="Posting Pro" target="_blank">posting-pro.herokuapp.com/</a>.</p>
+    </div>
+
     <div class="button-wrapper">
       <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button basic-button-outline center">Other Featured Projects</a>
     </div>
