--- a/work-forward-nola.html
+++ b/work-forward-nola.html
@@ -73,6 +73,35 @@
       <li>Prototyped solutions with InVision and tested with users</li>
     </ul>
 
+    <div class="flex-boxes">
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/workforce-triangle.jpg">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/workforce-triangle.jpg" alt="Whiteboard drawing of workforce triangle"></div>
+        <small>Workforce triangle</small>
+      </a>
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/design-session.jpg">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/design-session.jpg" alt="Workforce professionals participating in a design session"></div>
+        <small>Design session with workforce development professionals</small>
+      </a>
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/journey-map.jpg">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/journey-map.jpg" alt="Journey map written on post-it notes"></div>
+        <small>Job seeker journey map</small>
+      </a>
+    </div>
+    <div class="flex-boxes">
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/re-designed-one-pager.jpg">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/re-designed-one-pager.jpg" alt="Bulletin board with re-designed one-pager"></div>
+        <small>Re-designed one pager</small>
+      </a>
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/portfolio-sketches.jpg">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/portfolio-sketches.jpg" alt="Sketching versions of career pathways"></div>
+        <small>Sketching career pathways</small>
+      </a>
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/usability-test.jpg">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/usability-test.jpg" alt="Stephanie conducting a usability test on a phone"></div>
+        <small>Usability test</small>
+      </a>
+    </div>
+    
     <div class="button-wrapper">
       <a href="" onclick="readMore()" title="Click button to read more about process" class="basic-button basic-button-outline center">Read more</a>
     </div>
@@ -83,119 +112,6 @@
       <p>We heard from various career counselors that drop-off occurred when job seekers expected to walk in and out the same day with a job. When this didn’t happen, they lost valuable trust in the system and did not return.</p>
       <p>After prototyping a printed version, we built a mobile-first website that compiled information about each job center in one place. It provided suggestions on how to make the most of a visit, such as remembering to bring a driver’s license or state ID. A job seeker could also take a career assessment that matched their interests to potential career pathways. Throughout the website, messaging indicated that the process would take time but that the job seeker would be supported throughout. Finally, the job seeker could sign up for the "job system" where they would receive a personalized referral to a center and a follow-up with a career counselor.</p>
       <p>If career counselors can spend more time connecting job seekers to services that will lead them to careers, there will be better participation in the workforce system. We are still developing Work Forward NOLA, you can check it out now by visiting <a href="http://www.workforwardnola.com" title="Work Forward NOLA" target="_blank">www.workforwardnola.com</a>.</p>
-    </div>
-
-    <div class="flex-boxes">
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/workforce-triangle.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/workforce-triangle.jpg" alt="Whiteboard drawing of workforce triangle"></div>
-        <small>Workforce triangle</small>
-      </a>
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/workforce.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/workforce.jpg" alt="Simplified workforce triangle describing the relationship between Federal, State and local agencies"></div>
-        <small>Simplified workforce triangle</small>
-      </a>
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/design-session.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/design-session.jpg" alt="Several people participating in a design session"></div>
-        <small>Photo from design session</small>
-      </a>
-    </div>
-    <div class="flex-boxes">
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/journey-map3.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/journey-map3.jpg" alt="Journey map describing how long it would take for a job seeker to become employed"></div>
-        <small>Job seeker journey map</small>
-      </a>
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/journey-map-2.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/journey-map-2.jpg" alt="White board drawing of a journey map"></div>
-        <small>Job seeker journey map</small>
-      </a>
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/journey-map.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/journey-map.jpg" alt="Journey map written on post-it notes"></div>
-        <small>Job seeker journey map</small>
-      </a>
-    </div>
-    <div class="flex-boxes">
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/when-they.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/when-they.jpg" alt="Whiteboard planning that uses statements, when [blank], they [blank] to describe user behavior"></div>
-        <small>When...They...exercise</small>
-      </a>
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/original-one-pager.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/original-one-pager.jpg" alt="Bulletin board with original one-pager"></div>
-        <small>Original one-pager on bulletin board</small>
-      </a>
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/one-pager-sketches.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/one-pager-sketches.jpg" alt="Drafts of the one-pager printed and hung on a white board"></div>
-        <small>Different one-pager versions</small>
-      </a>
-    </div>
-    <div class="flex-boxes">
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/one-pager.gif">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/one-pager.gif" alt="Gif of the different draft versions of the one-pager"></div>
-        <small>Different one-pager versions</small>
-      </a>
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/One-Pager.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/One-Pager.jpg" alt="Final version of the one-pager"></div>
-        <small>Final re-designed one pager</small>
-      </a>
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/re-designed-one-pager.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/re-designed-one-pager.jpg" alt="Bulletin board with re-designed one-pager"></div>
-        <small>Re-designed one pager</small>
-      </a>
-    </div>
-    <div class="flex-boxes">
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/JobSeekerJourneyMap.png">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/JobSeekerJourneyMap.png" alt="Map showing the journey of people within the workforce system"></div>
-        <small>Workforce journey map</small>
-      </a>
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/WorkforceSystemUserJourney.png">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/WorkforceSystemUserJourney.png" alt="Map showing the journey of people within the workforce system in New Orleans"></div>
-        <small>Workforce journey map - New Orleans</small>
-      </a>
-      <a class="flex-box fancybox" rel="group" href="">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/appt.gif" alt="A wireframe with appointment scheduler for a visit to an opportunity Center"></div>
-        <small>Scheduling an appointment wireframe created in balsalmiq</small>
-      </a>
-    </div>
-    <div class="flex-boxes">
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/Georgia-career-exploration.png">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/Georgia-career-exploration.png" alt="Wireframe of career exploration interface"></div>
-        <small>Career exploration wireframe created in balsalmiq</small>
-      </a>
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/Pascal-career-exploration.png">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/Pascal-career-exploration.png" alt="Wireframe of career assessment interface"></div>
-        <small>Career assessment wireframe created in balsalmiq</small>
-      </a>
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/steph-career-exploration.png">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/steph-career-exploration.png" alt="Wireframe of job exploration"></div>
-        <small>Career exploration wireframe created in balsalmiq</small>
-      </a>
-    </div>
-    <div class="flex-boxes">
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/career-exploration.gif">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/career-exploration.gif" alt="Mock-up of career assessment"></div>
-        <small>Career assessment wireframe</small>
-      </a>
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/portfolio-sketches2.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/portfolio-sketches2.jpg" alt="Sketching of a home page"></div>
-        <small>Sketching interface</small>
-      </a>
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/wfnv.2.gif">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/wfnv.2.gif" alt="Gif of a version of Work Forward NOLa"></div>
-        <small>Version 2 mock-up</small>
-      </a>
-    </div>
-    <div class="flex-boxes">
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/usability-test.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/usability-test.jpg" alt="Stephanie conducting a usability test on a phone"></div>
-        <small>Usability test</small>
-      </a>
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/portfolio-sketches.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/portfolio-sketches.jpg" alt="Sketching versions of career pathways"></div>
-        <small>Sketching career pathways</small>
-      </a>
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/wfn.gif">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/wfn.gif" alt="Gif of final version"></div>
-        <small>Final version</small>
-      </a>
     </div>
     <div class="button-wrapper">
       <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button basic-button-outline center">Other Featured Projects</a>
