Adjusted portfolio pages
Ideo-org and Exygy

--- a/web-request-system.html
+++ b/web-request-system.html
@@ -54,7 +54,7 @@
     <h3>Process</h3>
     <ul>
       <li>User research to identify problems with current system</li>
-      <li>Mapped out entire journey of web request</li>
+      <li>Mapped out entire journey of a web request</li>
       <li>Developed an MVP of system using SharePoint</li>
       <li>Conducted usability tests and made improvements</li>
     </ul>
