--- a/exygy.html
+++ b/exygy.html
@@ -37,7 +37,7 @@
   <div class="navigation" role="banner">
     <div class="navigation-wrapper">
       <nav role="navigation">
-        <p class="nav-title"><strong>Stephanie Cain</strong>, Visual Designer</p>
+        <p class="nav-title"><strong>Stephanie Cain</strong>, Product Designer</p>
         <ul id="js-navigation-menu" class="navigation-menu show">
           <li class="nav-link"><a href="#primary" title="Return to Top">Return to Top</a></li>
           <li class="nav-link"><a href="#about" title="About">About</a></li>
@@ -64,7 +64,7 @@
   </svg>
   <header>
     <h1>Hello, I am Stephanie Cain.</h1>
-    <h2>I am a visual designer motivated by working with under-served communities to identify and develop innovative solutions and growth opportunities.</h2>
+    <h2>I am a product designer motivated by working with under-served communities to identify and develop innovative solutions and growth opportunities.</h2>
     <div class="social-media">
       <svg id="social-header" xmlns="http://www.w3.org/2000/svg" width="190.4" height="60.58" viewBox="0 0 138.4 30.58">
         <defs>
