Visual to product
Nav bar

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="navigation" role="banner">
     <div class="navigation-wrapper">
       <nav role="navigation">
-        <p class="nav-title"><strong>Stephanie Cain</strong>, Visual Designer</p>
+        <p class="nav-title"><strong>Stephanie Cain</strong>, Product Designer</p>
         <ul id="js-navigation-menu" class="navigation-menu show">
           <li class="nav-link"><a href="javascript:void(0)" title="Home">Home</a></li>
           <li class="nav-link"><a href="info.html" title="Info">Info</a></li>
@@ -49,7 +49,7 @@
   </svg>
   <header>
     <h1>Hello, I am Stephanie Cain.</h1>
-    <h2>I am a visual designer that creates user-focused civic technology.</h2>
+    <h2>I am a product designer that creates user-focused civic technology.</h2>
     <div class="social-media">
       <svg id="social-header" xmlns="http://www.w3.org/2000/svg" width="190.4" height="60.58" viewBox="0 0 138.4 30.58">
         <defs>
