--- a/posting-pro.html
+++ b/posting-pro.html
@@ -35,7 +35,7 @@
   <div class="navigation" role="banner">
     <div class="navigation-wrapper">
       <nav role="navigation">
-        <p class="nav-title"><strong>Stephanie Cain</strong>, Visual Designer</p>
+        <p class="nav-title"><strong>Stephanie Cain</strong>, Product Designer</p>
         <ul id="js-navigation-menu" class="navigation-menu show">
           <li class="nav-link"><a href="index.html" title="Home">Home</a></li>
           <li class="nav-link"><a href="info.html" title="Info">Info</a></li>
