--- a/info.html
+++ b/info.html
@@ -37,6 +37,22 @@
     <p class="centered">I am currently based in San Francisco, California.</p>
     <p class="centered">Interested in getting in touch? <a href="mailto:aunaprendoad@gmail.com" title="Email Stephanie Cain">Send me an email</a>.</p>
   </section>
+  
+  <section id="experience">
+    <h1>Experience</h1>
+    <h4>Product Design Fellow at Code for America</h4>
+    <p>January 2016 - November 2016</p>
+    <br><br>
+
+    <h4>Visual Designer for the Federal Government*</h4>
+    <p>September 2012 - December 2015</p>
+    <p style="font-size:98%"><i>*The Office of Surface Mining Reclamation and Enforcement, Department of the Interior</i></p>
+    <br><br>
+
+    <h4>Graphic Design and Studio Art, Carthage College 2012</h4>
+    <p>Bachelors of Art Cum Laude</p>
+  </section>
+
   <section>
     <h2>Interests</h2>
     <ul>
