--- a/careerPath-NOLA.html
+++ b/careerPath-NOLA.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Stephanie Cain's Online Portfolio</title>
-  <meta name="description" content="Project: Work Forward NOLA">
+  <title>CareerPath NOLA - Stephanie Cain's Online Portfolio</title>
+  <meta name="description" content="Project: CareerPath NOLA">
   <meta name="author" content="Stephanie Cain">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -59,59 +59,58 @@
     </svg>
   </svg>
   <section id="project-container">
-    <h2>Work Forward NOLA</h2>
-    <p class="centered"><a href="http://www.workforwardnola.com" title="Work Forward NOLA" target="_blank">www.workforwardnola.com</a></p>
-
-    <p>A mobile-first website for job seekers that sets proper expectations and prepares them for their first visit to a job center.</p>
-
-    <h3>Process</h3>
-    <ul>
-      <li>User research and interviews with over 50 job seekers, workforce professionals and employers</li>
-      <li>Moderated design sprints and collaborative design sessions</li>
-      <li>Content creation and message development</li>
-      <li>Designed and developed UI</li>
-      <li>Prototyped solutions with InVision and tested with users</li>
-    </ul>
-
-    <div class="flex-boxes">
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/workforce-triangle.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/workforce-triangle.jpg" alt="Whiteboard drawing of workforce triangle"></div>
-        <small>Workforce triangle</small>
+    <h2>CareerPath NOLA</h2>
+    <p class="centered"><a href="http://www.careerpathnola.com" title="CareerPath NOLA" target="_blank">www.careerpathnola.com</a></p>
+    <p>A mobile-first website that acts as a digital one-pager for the workforce system in New Orleans, reducing drop-off by setting proper expectations and preparing job seekers for their first visit.</p>
+    <div class="space"></div>
+    <h2>Process</h2>
+    <div class="process">
+      <h4>Listening and gathering</h4>
+      <ul>
+        <li>Conducted interviews with 50 job seekers, workforce professionals and employers</li>
+        <li>Developed journey maps of the workforce system nationally and locally to New Orleans</li>
+      </ul>
+      <a class="fancybox" rel="group" href="assets/images/careerPath-NOLA/WorkforceSystemUserJourney.png">
+        <div class="imgCont"><img src="assets/images/careerPath-NOLA/thumbnails/WorkforceSystemUserJourney.jpg" alt="Job seeker journey map in New Orleans" /></div>
       </a>
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/design-session.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/design-session.jpg" alt="Workforce professionals participating in a design session"></div>
-        <small>Design session with workforce development professionals</small>
-      </a>
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/journey-map.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/journey-map.jpg" alt="Journey map written on post-it notes"></div>
-        <small>Job seeker journey map</small>
-      </a>
-    </div>
-    <div class="flex-boxes">
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/re-designed-one-pager.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/re-designed-one-pager.jpg" alt="Bulletin board with re-designed one-pager"></div>
-        <small>Re-designed one pager</small>
-      </a>
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/portfolio-sketches.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/portfolio-sketches.jpg" alt="Sketching versions of career pathways"></div>
-        <small>Sketching career pathways</small>
-      </a>
-      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/usability-test.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/usability-test.jpg" alt="Stephanie conducting a usability test on a phone"></div>
-        <small>Usability test</small>
-      </a>
+      <div class="clearfix"></div>
     </div>
 
-    <div class="button-wrapper">
-      <a href="" onclick="readMore()" title="Click button to read more about process" class="basic-button basic-button-outline center">Read more</a>
+    <div class="process">
+      <h4>Synthesizing and generating ideas</h4>
+      <ul>
+        <li>Regularly shared and organized user research learnings</li>
+        <li>Moderated team design sprints and collaborative design sessions</li>
+      </ul>
+      <a class="fancybox" rel="group" href="assets/images/careerPath-NOLA/listening.jpg">
+        <div class="imgCont"><img src="assets/images/careerPath-NOLA/thumbnails/listening.jpg" alt="Workforce professionals participating in a design session" /></div>
+      </a>
+      <div class="clearfix"></div>
     </div>
 
-    <div class="hide">
-      <p>The workforce system encompasses local, state and federal resources such as unemployment, job centers and WIOA (Workforce Innovation and Opportunity Act), a federally funded program to grant money for job training. The system is complex and difficult to navigate which results in job seekers dropping off when they become unsure of their next steps. Job seekers were more successful when they connected with someone who can help guide them to a career. If more candidates understood clear expectations ahead of time, attrition rates would be reduced and overall job center engagement would improve.</p>
-      <p>The information available online for job centers in New Orleans was sparse and spread across different websites. If someone had a question or was unsure what to do, they had to visit a center in person. Once they arrived they would be prompted to complete steps that they could’ve done on their own time, such as sign up for LAWorks, the Louisiana state job website.</p>
-      <p>We heard from various career counselors that drop-off occurred when job seekers expected to walk in and out the same day with a job. When this didn’t happen, they lost valuable trust in the system and did not return.</p>
-      <p>After prototyping a printed version, we built a mobile-first website that compiled information about each job center in one place. It provided suggestions on how to make the most of a visit, such as remembering to bring a driver’s license or state ID. A job seeker could also take a career assessment that matched their interests to potential career pathways. Throughout the website, messaging indicated that the process would take time but that the job seeker would be supported throughout. Finally, the job seeker could sign up for the "job system" where they would receive a personalized referral to a center and a follow-up with a career counselor.</p>
-      <p>If career counselors can spend more time connecting job seekers to services that will lead them to careers, there will be better participation in the workforce system. We are still developing Work Forward NOLA, you can check it out now by visiting <a href="http://www.workforwardnola.com" title="Work Forward NOLA" target="_blank">www.workforwardnola.com</a>.</p>
+    <div class="process">
+      <h4>Prototyping, development and design</h4>
+      <ul>
+        <li>Prototyped printed version and tested new content and layout</li>
+        <li>Designed and helped developed user journey and interface</li>
+        <li>Prototyped solutions with InVision and tested with users</li>
+      </ul>
+      <a class="fancybox" rel="group" href="assets/images/careerPath-NOLA/usability-test.jpg">
+        <div class="imgCont"><img src="assets/images/careerPath-NOLA/thumbnails/usability-test.jpg" alt="Stephanie conducting a usability test on a phone" /></div>
+      </a>
+      <div class="clearfix"></div>
+    </div>
+
+    <div class="process">
+      <h4>Refine and repeat</h4>
+      <ul>
+        <li>Content creation and message development</li>
+        <li>Applied learnings from prototypes to continued development of tool</li>
+      </ul>
+      <a class="fancybox" rel="group" href="assets/images/careerPath-NOLA/re-designed-one-pager.jpg">
+        <div class="imgCont"><img src="assets/images/careerPath-NOLA/thumbnails/re-designed-one-pager.jpg" alt="Bulletin board with re-designed one-pager" /></div>
+      </a>
+      <div class="clearfix"></div>
     </div>
     <div class="button-wrapper">
       <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button basic-button-outline center">Other Featured Projects</a>
