--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
   <section id="featuredProjects">
     <h1>Featured Projects</h1>
     <div class="flex-boxes">
-      <a class="flex-box" href="work-forward-nola.html"  title="Work Forward NOLA">
+      <a class="flex-box" href="careerPath-NOLA.html"  title="CareerPath NOLA">
         <img src="assets/images/cfa-logo.png" title="Code for America Logo" alt="Code for America Logo"/>
-        <h3>Work Forward NOLA</h3>
+        <h3>CareerPath NOLA</h3>
         <p>A mobile-first website to assist job seekers in New Orleans navigate the workforce system.</p>
       </a>
       <a class="flex-box" href="posting-pro.html" title="Posting Pro">
