--- a/careerPath-NOLA.html
+++ b/careerPath-NOLA.html
@@ -62,6 +62,20 @@
     <h2>CareerPath NOLA</h2>
     <p class="centered"><a href="http://www.careerpathnola.com" title="CareerPath NOLA" target="_blank">www.careerpathnola.com</a></p>
     <p>A mobile-first website that acts as a digital one-pager for the workforce system in New Orleans, reducing drop-off by setting proper expectations and preparing job seekers for their first visit.</p>
+
+    <div class="phoneMocks">
+      <a class="fancybox" rel="group" href="assets/images/careerPath-NOLA/CPN-phone-1.jpg">
+        <img src="assets/images/careerPath-NOLA/CPN-phone-1.jpg" alt="Screenshot Career Path NOLA user interface" />
+      </a>
+      <a class="fancybox" rel="group" href="assets/images/careerPath-NOLA/CPN-phone-2.jpg">
+        <img src="assets/images/careerPath-NOLA/CPN-phone-2.jpg" alt="Screenshot Career Path NOLA user interface" />
+      </a>
+      <a class="fancybox" rel="group" href="assets/images/careerPath-NOLA/CPN-phone-3.jpg">
+        <img src="assets/images/careerPath-NOLA/CPN-phone-3.jpg" alt="Screenshot Career Path NOLA user interface" />
+      </a>
+      <div class="clear"></div>
+    </div>
+
     <div class="space"></div>
     <h2>Process</h2>
     <div class="process">
